facebook event importing

--- a/AqlaEvents/App.config
+++ b/AqlaEvents/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="AqlaEvents.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
+    <userSettings>
+        <AqlaEvents.Settings>
+            <setting name="FacebookAccessToken" serializeAs="String">
+                <value>1469104693369891|b6D05Se9_QULx4VvdtCQbn02AgA</value>
+            </setting>
+        </AqlaEvents.Settings>
+    </userSettings>
 </configuration>
