--- a/AqlaEvents/packages.config
+++ b/AqlaEvents/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.6.1" targetFramework="net46" />
+  <package id="cef.redist.x64" version="3.2987.1601" targetFramework="net46" />
+  <package id="cef.redist.x86" version="3.2987.1601" targetFramework="net46" />
+  <package id="CefSharp.Common" version="57.0.0" targetFramework="net46" />
+  <package id="CefSharp.WinForms" version="57.0.0" targetFramework="net46" />
   <package id="CsvHelper" version="2.16.3.0" targetFramework="net46" />
   <package id="Facebook" version="7.0.6" targetFramework="net46" />
 </packages>
