auto import upcoming events already interested in

--- a/AqlaEvents/App.config
+++ b/AqlaEvents/App.config
@@ -13,6 +13,9 @@
             <setting name="FacebookAccessToken" serializeAs="String">
                 <value>1469104693369891|b6D05Se9_QULx4VvdtCQbn02AgA</value>
             </setting>
+            <setting name="AppId" serializeAs="String">
+                <value>1469104693369891</value>
+            </setting>
         </AqlaEvents.Settings>
     </userSettings>
 </configuration>
