--- a/AqlaEvents/AqlaEvents.csproj
+++ b/AqlaEvents/AqlaEvents.csproj
@@ -90,6 +90,7 @@
     <Compile Include="EventDescriptionParser.cs" />
     <Compile Include="FacebookEvent.cs" />
     <Compile Include="FacebookEventFormat.cs" />
+    <Compile Include="FacebookEventOwner.cs" />
     <Compile Include="FacebookEventRetriever.cs" />
     <Compile Include="FacebookEventsList.cs" />
     <Compile Include="FacebookPlace.cs" />
@@ -112,6 +113,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Settings.cs" />
     <Compile Include="Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
